XP-4696 Wizard Step Form - X icon is not correctly aligned * Fixed alignment of the X icon via mixin

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/ui/security/principal-selected-option-view.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/ui/security/principal-selected-option-view.less
@@ -9,11 +9,7 @@
     min-width: 200px;
   }
 
-  .icon-close {
-    border: 1px solid transparent;
-    .close-mixin();
-    .focusable();
-  }
+  .icon-close-mixin();
 
   &.removed {
     .@{_COMMON_PREFIX}main-name {
